Fix command registration for ClusterGetDatabaseVersionCommand and ShardsvrCoordinateMultiUpdateCommand

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Cluster Scalability 2023-11-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, ClusterGetDatabaseVersionCommand and ShardsvrCoordinateMultiUpdateCommand are registered without specifying forRouter() or forShard(). So they currently exist in both command registries.

            Assignee:
            Cheahuychou Mao
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: