SERVER-83065 Fix command registration for ClusterGetDatabaseVersionCommand and ShardsvrCoordinateMultiUpdateCommand