src/mongo/db/s/migration_blocking_operation/shardsvr_coordinate_multi_update_command.cpp
@@ -90,7 +90,7 @@ public:
         }
     };
 };
-MONGO_REGISTER_COMMAND(ShardsvrCoordinateMultiUpdateCommand);
+MONGO_REGISTER_COMMAND(ShardsvrCoordinateMultiUpdateCommand).forShard();
 
 }  // namespace
 }  // namespace mongo
